[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pursuit_msg"
version = "0.2.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["pursuit_msg", "pursuit_msg.*"]  # ["*"] by default
